force-app/main/default/objects/VGE_PL_Iteration_Yearly_Summary__c/VGE_PL_Iteration_Yearly_Summary__c.object-meta.xml
<CustomObject>
    <label>VGE PL Iteration Yearly Summary</label>
    <nameField>
        <label>Iteration Yearly Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VGE PL Iteration Yearly Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>