force-app/main/default/objects/VGE_PL_Iteration_Yearly_Summary__c/fields/Additional_Direct_Costs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Direct_Costs_Amount__c</fullName>
    <label>Additional Direct Costs Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>