force-app/main/default/objects/VGE_PL_Iteration_Yearly_Summary__c/fields/Additional_Direct_Costs_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Direct_Costs_Description__c</fullName>
    <label>Additional Direct Costs Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>