force-app/main/default/objects/VGE_PL_Iteration_Yearly_Summary__c/fields/Lookup_VGE_PL_Iteration_Country_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lookup_VGE_PL_Iteration_Country_Summary__c</fullName>
    <label>Lookup VGE PL Iteration Country Summary</label>
    <referenceTo>VGE_PL_Country_Summary__c</referenceTo>
    <relationshipLabel>VGE PL Iteration Yearly Summary</relationshipLabel>
    <relationshipName>VGE_PL_Iteration_Yearly_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>